# pilezero

./: .gitignore  CLAUDE.md  README.md  TASKS.md  config.toml  pilezero-spec.md  pyproject.toml  routing.toml  senders.toml
launchd/: README.md  net.kenliu.pilezero.plist
pilezero/: __main__.py  classify.py  models.py
src/pilezero/: __init__.py  __main__.py  classify.py  config.py  extract.py  inspect.py  install_launchd.py  log.py  move.py  notify.py  route.py  status.py
tests/: test_classify.py  test_e2e.py  test_log.py  test_move.py  test_route.py  test_status.py
